--- a/Code/app/src/main/res/layout/activity_add.xml
+++ b/Code/app/src/main/res/layout/activity_add.xml
@@ -33,11 +33,11 @@
             android:layout_height="wrap_content">
 
             <androidx.viewpager.widget.ViewPager
-                android:id="@+id/viewPager"
+                android:id="@+id/AddviewPager"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:adjustViewBounds="true"
-                app:layout_constraintEnd_toEndOf="@id/guideline"
+                app:layout_constraintEnd_toEndOf="@id/Addguideline"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/Addcontent"
                 app:layout_constraintDimensionRatio="1:1">
@@ -130,7 +130,7 @@
                 android:layout_marginTop="24dp"
                 android:text="Select a time"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/viewPager" />
+                app:layout_constraintTop_toBottomOf="@+id/AddviewPager" />
 
             <Button
                 android:id="@+id/dateButton"
@@ -160,7 +160,7 @@
                 android:layout_marginStart="64dp"
                 android:layout_marginLeft="64dp"
                 android:layout_marginTop="20dp"
-                android:text="Social Situation"
+                android:text="Social Situation:"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="@+id/reasonView"
                 app:layout_constraintTop_toBottomOf="@+id/reasonView" />
@@ -179,6 +179,17 @@
                 app:layout_constraintBottom_toBottomOf="@+id/reasonView"
                 app:layout_constraintStart_toEndOf="@+id/reasonView" />
 
+            <Button
+                android:id="@+id/EditLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:text="Change Location?"
+                android:visibility="gone"
+                app:layout_constraintStart_toEndOf="@+id/locationToggle"
+                app:layout_constraintTop_toBottomOf="@+id/photoToggle" />
+
             <Spinner
                 android:id="@+id/spinner1"
                 android:layout_width="match_parent"
@@ -190,7 +201,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/socialView" />
 
             <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline"
+                android:id="@+id/Addguideline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -207,5 +218,4 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-
 </LinearLayout>
