--- a/Code/app/src/main/res/values/colors.xml
+++ b/Code/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#40E0D0</color>
-    <color name="colorPrimaryDark">#008080</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#810c37</color>
+    <color name="colorPrimaryDark">#520816 </color>
+    <color name="colorAccent">#ac66ae</color>
 </resources>
